# STO-values

./: CMakeLists.txt  README.md
include/: logger.h  s2g.h
src/: beta_only_estimator.cpp  environ.cpp  estimator.cpp  incremental.cpp  logger.cpp  parameters.cpp  s2g.cpp  three_d_estimator.cpp
test/: CMakeLists.txt  test-s2g.cpp
